Fix waybar bluetooth module styling: round left border and add spacing
- Add rounded left border to bluetooth module (1rem radius)
- Add left margin (1rem) to create spacing between wifi-reset and bluetooth

--- a/waybar/style.css
+++ b/waybar/style.css
@@ -84,7 +84,8 @@
 
 #bluetooth {
   color: @sapphire;
-  border-radius: 0;
+  border-radius: 1rem 0px 0px 1rem;
+  margin-left: 1rem;
 }
 
 #pulseaudio {
